<resources>
    <string name="app_name">Student Delegates App</string>
    <string name="logIn_text_1">Log in below if you already have an account. Click Sign Up if you do’t have an account.</string>
    <string name="signUp_text_1">Enter details below and sign up:</string>

    <string name="updateAccount_text_1">Enter your username and then your new password/ year group below:</string>

    <!-- Values for CanteenOptionPage-->
    <string name="canteen_question_1_text">Rate the quality of the food:</string>
    <string name="canteen_question_2_text">Rate how healthy the canteen food is: </string>
    <string name="canteen_question_3_text">Do you think there is enough variety in the school menu?</string>
    <string name="canteen_question_4_text">How can we improve canteen atmosphere? </string>
    <string name="canteen_question_5_text">How can we improve the quality of the food?</string>
    <string name="canteen_other_comments_text">Is there anything else you would like us to know?</string>

    <string name="canteen_answer_1a_text">Very dissatisfied </string>
    <string name="canteen_answer_1b_text">Dissatisfied</string>
    <string name="canteen_answer_1c_text">Fairy satisfied</string>
    <string name="canteen_answer_1d_text">Very satisfied</string>

    <string name="canteen_answer_2a_text">Very Unhealthy</string>
    <string name="canteen_answer_2b_text">Unhealthy</string>
    <string name="canteen_answer_2c_text">Fairly Healthy</string>
    <string name="canteen_answer_2d_text">Very Healthy</string>

    <string name="canteen_answer_3a_text">Yes</string>
    <string name="canteen_answer_3b_text">No</string>


    <!-- Values for SubjectOptionPage-->
    <string name="subject_question_1_text">Which subject do you want to give feedback on?</string>
    <string name="subject_question_2_text">How much time do you spend on homework per subject?</string>
    <string name="subject_question_3_text">Do you think you receive too much burden from tests?</string>
    <string name="subject_question_4_text">How can we improve the classroom atmosphere?</string>
    <string name="subject_question_5_text">How can the sharing of classroom resources be improved?</string>
    <string name="subject_other_comments_text">Is there anything else you would like us to know?</string>

    <string name="subject_answer_3a_text">Yes</string>
    <string name="subject_answer_3b_text">No</string>

    <!-- Values for ECAOptionPage-->
    <string name="eca_question_1_text">Select a category:</string>
    <string name="eca_question_2_text">How engaged are you in your ECA session?</string>
    <string name="eca_question_3_text">How efficient is the sign up process for ECAs?</string>
    <string name="eca_question_4_text">How can we make your ECA more impactful?</string>
    <string name="eca_question_5_text">How can we make the ECAs more engaging for you?</string>
    <string name="eca_other_comments_text">Is there anything else you want to share with us?</string>

    <string name="eca_answer_1a_text">Service </string>
    <string name="eca_answer_1b_text">Sports</string>
    <string name="eca_answer_1c_text">Skills</string>
    <string name="eca_answer_1d_text">Others</string>

    <string name="eca_answer_2a_text">Not engaged at all</string>
    <string name="eca_answer_2b_text">Hardly engaged</string>
    <string name="eca_answer_2c_text">Fairly engaged</string>
    <string name="eca_answer_2d_text">Very Engaged</string>

    <string name="eca_answer_3a_text">Very inefficient</string>
    <string name="eca_answer_3b_text">Inefficient</string>
    <string name="eca_answer_3c_text">Fairly efficient</string>
    <string name="eca_answer_3d_text">Very efficient</string>

    <!-- Values for StudyPeriodOptionPage-->
    <string name="study_period_question_1_text">Where do you usually go during your study period?</string>
    <string name="study_period_question_2_text">How productive is your study period?</string>
    <string name="study_period_question_3_text">Do you think you have enough study periods?</string>
    <string name="study_period_question_4_text">How can we improve the senior studies atmosphere?</string>
    <string name="study_period_question_5_text">How can we make study periods more productive for you?</string>
    <string name="study_period_other_comments_text">Is there anything else you want to share with us?</string>

    <string name="study_period_answer_1a_text">Senior Studies</string>
    <string name="study_period_answer_1b_text">Library</string>
    <string name="study_period_answer_1c_text">Lounge</string>
    <string name="study_period_answer_1d_text">Others</string>

    <string name="study_period_answer_2a_text">Not productive at all</string>
    <string name="study_period_answer_2b_text">Hardly productive</string>
    <string name="study_period_answer_2c_text">Fairly productive</string>
    <string name="study_period_answer_2d_text">Very productive</string>

    <string name="study_period_answer_3a_text">Yes</string>
    <string name="study_period_answer_3b_text">No</string>

    <!-- Values for TeachersOptionPage-->
    <string name="teacher_question_1_text">Which subject do you want to give feedback on?</string>
    <string name="teacher_question_2_text">Do you find the teacher’s teaching style engaging?</string>
    <string name="teacher_question_3_text">How useful is the feedback received from the teacher?</string>
    <string name="teacher_question_4_text">What is the best thing about the way your teacher teaches?</string>
    <string name="teacher_question_5_text">How can your teacher make the lessons more engaging?</string>
    <string name="teacher_other_comments_text">Is there anything else you want to share with us?</string>

    <string name="teacher_answer_2a_text">Yes</string>
    <string name="teacher_answer_2b_text">No</string>

    <string name="teacher_answer_3a_text">No feedback given</string>
    <string name="teacher_answer_3b_text">Not so useful</string>
    <string name="teacher_answer_3c_text">fairly useful</string>
    <string name="teacher_answer_3d_text">No</string>

    <!-- Values for ViewReportPage-->
    <string name="view_report_option_1_text">By Username (Check box then click button):</string>
    <string name="view_report_option_1a_text">All Users</string>
    <string name="view_report_option_1b_text">Enter Username</string>
    <string name="view_report_option_2_text">Select Topic (Click relevant button) :</string>
    <string name="view_report_option_2a_text">Canteen</string>
    <string name="view_report_option_2b_text">Subject</string>
    <string name="view_report_option_2c_text">ECA</string>
    <string name="view_report_option_2d_text">Teachers</string>
    <string name="view_report_option_2e_text">Study Period</string>

</resources>
