<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    android:orientation="vertical"
    tools:context="com.example.dhruvmittal.studentdelegatesapp.activity.LogInActivity">

    <TextView
        android:id="@+id/ECATitleText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="ECA"
        android:textColor="@android:color/background_dark"
        android:textSize="36sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        tools:layout_editor_absoluteX="111dp"
        tools:layout_editor_absoluteY="5dp" />

    <TextView
        android:id="@+id/ECAQuestion1Label"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:text="@string/eca_question_1_text"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="235dp"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ECAAnswer1A"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="115dp"
            android:text="@string/eca_answer_1a_text"
            />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ECAAnswer1B"
            android:layout_marginBottom="5dp"
            android:text="@string/eca_answer_1b_text"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="15dp">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:id="@+id/ECAAnswer1C"
            android:text="@string/eca_answer_1c_text"
            android:layout_marginRight="130dp"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ECAAnswer1D"
            android:layout_marginBottom="5dp"
            android:text="@string/eca_answer_1d_text"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/ECAQuestion2Label"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:text="@string/eca_question_2_text"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="235dp"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:id="@+id/ECAAnswer2A"
            android:layout_marginRight="48dp"
            android:text="@string/eca_answer_2a_text"
            />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ECAAnswer2B"
            android:layout_marginBottom="5dp"
            android:text="@string/eca_answer_2b_text"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="20dp">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:id="@+id/ECAAnswer2C"
            android:text="@string/eca_answer_2c_text"
            android:layout_marginRight="70dp"
            />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ECAAnswer2D"
            android:layout_marginBottom="5dp"
            android:text="@string/eca_answer_2d_text"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/Question3Label"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:text="@string/eca_question_3_text"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="235dp"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp">

        <CheckBox
            android:id="@+id/ECAAnswer3A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="65dp"
            android:text="@string/eca_answer_3a_text"
            />

        <CheckBox
            android:id="@+id/ECAAnswer3B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/eca_answer_3b_text"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="10dp">

        <CheckBox
            android:id="@+id/ECAAnswer3C"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="70dp"
            android:text="@string/eca_answer_3c_text"
            />

        <CheckBox
            android:id="@+id/ECAAnswer3D"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/eca_answer_3d_text"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/ECANextPageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Next Page"
            android:textAlignment="center"
            tools:layout_editor_absoluteX="95dp"
            tools:layout_editor_absoluteY="396dp"
            android:layout_marginRight="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/ECALogOutButton1"
            android:layout_width="185dp"
            android:layout_height="48dp"
            android:text="Log Out"
            android:textAlignment="center"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="447dp" />

        <Button
            android:id="@+id/ECAMenuButton1"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:text="Menu"
            android:textAlignment="center"
            tools:layout_editor_absoluteX="280dp"
            tools:layout_editor_absoluteY="447dp"/>
    </LinearLayout>

</LinearLayout>
