<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    android:orientation="vertical"
    tools:context="com.example.dhruvmittal.studentdelegatesapp.activity.LogInActivity">

    <TextView
        android:id="@+id/StudyPeriodTitleText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="STUDY PERIOD"
        android:textColor="@android:color/background_dark"
        android:textSize="36sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        tools:layout_editor_absoluteX="111dp"
        tools:layout_editor_absoluteY="5dp" />

    <TextView
        android:id="@+id/StudyPeriodQuestion1Label"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:text="@string/study_period_question_1_text"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="235dp"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp">

        <CheckBox
            android:id="@+id/StudyPeriodAnswer1A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="85dp"
            android:text="@string/study_period_answer_1a_text"
            />

        <CheckBox
            android:id="@+id/StudyPeriodAnswer1B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/study_period_answer_1b_text"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="15dp">

        <CheckBox
            android:id="@+id/StudyPeriodAnswer1C"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/study_period_answer_1c_text"
            android:layout_marginRight="130dp"/>

        <CheckBox
            android:id="@+id/StudyPeriodAnswer1D"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/study_period_answer_1d_text"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/StudyPeriodQuestion2Label"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:text="@string/study_period_question_2_text"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="235dp"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp">

        <CheckBox
            android:id="@+id/StudyPeriodAnswer2A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="48dp"
            android:text="@string/study_period_answer_2a_text"
            />

        <CheckBox
            android:id="@+id/StudyPeriodAnswer2B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/study_period_answer_2b_text"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="20dp">

        <CheckBox
            android:id="@+id/StudyPeriodAnswer2C"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/study_period_answer_2c_text"
            android:layout_marginRight="70dp"
            />

        <CheckBox
            android:id="@+id/StudyPeriodAnswer2D"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/study_period_answer_2d_text"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/StudyPeriodQuestion3Label"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:text="@string/study_period_question_3_text"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="235dp"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="10dp">

        <CheckBox
            android:id="@+id/StudyPeriodAnswer3A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/study_period_answer_3a_text"
            android:layout_marginRight="151dp"
            />

        <CheckBox
            android:id="@+id/StudyPeriodAnswer3B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/study_period_answer_3b_text"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="30dp">

        <Button
            android:id="@+id/StudyPeriodNextPageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Next Page"
            android:textAlignment="center"
            tools:layout_editor_absoluteX="95dp"
            tools:layout_editor_absoluteY="396dp"
            android:layout_marginRight="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/StudyPeriodLogOutButton1"
            android:layout_width="185dp"
            android:layout_height="48dp"
            android:text="Log Out"
            android:textAlignment="center"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="447dp" />

        <Button
            android:id="@+id/StudyPeriodMenuButton1"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:text="Menu"
            android:textAlignment="center"
            tools:layout_editor_absoluteX="280dp"
            tools:layout_editor_absoluteY="447dp"/>
    </LinearLayout>

</LinearLayout>
